Se cambia el enfoque creando Programas de Descompresion/Desencriptado tanto para RLE y LZ78 usando como entradas y parametros los dados por el dataset provisto

--- a/DescomprimidoRLE/CMakeLists.txt
+++ b/DescomprimidoRLE/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(Programa_2 LANGUAGES CXX)
+project(DescomprimidoRLE LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(Programa_2 main.cpp)
+add_executable(DescomprimidoRLE main.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS Programa_2
+install(TARGETS DescomprimidoRLE
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
