--- a/DescomprimidoLZ78/CMakeLists.txt
+++ b/DescomprimidoLZ78/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(pruebas LANGUAGES CXX)
+project(DescomprimidoLZ78 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(pruebas main.cpp)
+add_executable(DescomprimidoLZ78 main.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS pruebas
+install(TARGETS DescomprimidoLZ78
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
