--- a/DesencriptadoRLE/CMakeLists.txt
+++ b/DesencriptadoRLE/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(Programa_1 LANGUAGES CXX)
+project(DesencriptadoRLE LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(Programa_1 main.cpp)
+add_executable(DesencriptadoRLE main.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS Programa_1
+install(TARGETS DesencriptadoRLE
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
